Fix: footer blob not appearing and nav bar z-index
- Removing position and z-index on footer show that the images appear back where they're expected

- Upping the z-index on nav bar so it isn't hidden in mobile view

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,8 +2,6 @@
 
 .footer {
   &__background {
-    position: relative;
-    z-index: 0;
     &-blue {
       position: absolute;
       bottom: 0;
