--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -11,7 +11,7 @@ $item-color: hsla(40, 14%, 87%, 70%);
   font-size: 1.4rem;
   font-weight: 600;
   position: relative;
-  z-index: 99;
+  z-index: 999;
 
   .container {
     list-style-type: none;
